--- a/product/templates/product/edit_splicing.html
+++ b/product/templates/product/edit_splicing.html
@@ -2,9 +2,9 @@
 <!doctype html>
 <html lang="en">
 	{% block content %}
-	<!--
-	{% include "product/stock_list.html" %}
-	-->
+	
+	{% include "product/splicing.html" %}
+	
   <head>
   
 	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
