--- a/product/templates/product/splicing.html
+++ b/product/templates/product/splicing.html
@@ -14,11 +14,11 @@
            margin: 0; 
     }
 	.small-font {
-        font-size: 15px; /* Adjust the font size as needed */
+        font-size: 20px; /* Adjust the font size as needed */
 		font-weight: bold;
 	}
 	.table1-container {
-            width: 30%;
+            width: 35%;
             float: left;
             box-sizing: border-box;
             padding: 5px;
@@ -34,14 +34,14 @@
     }
 	
 	.table2-container {
-            width: 70%;
+            width: 65%;
             float: left;
             box-sizing: border-box;
             padding: 10px;
 			background-color:white;
     }
 	table tr {
-            height: 50px; /* Increase the height for all table rows */
+            height: 40px; /* Increase the height for all table rows */
     
 	}	
 	table input {
@@ -73,14 +73,18 @@
             color: black;
             font-size: 20px;
     }
+	body {
+		font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	}
 	</style>
 	
 </head>
 <body>
 	
-    <h1 class="table1-heading">New Data Entry Zone</h1>
+    
 	
     <div class="table1-container">
+	<p style="text-align:center;background-color:grey;color:white;font-size:2.5em;">New Data Entry Zone</p>
     <form method="POST">
 	
 		{% csrf_token %}
@@ -99,7 +103,7 @@
 			
 		<div class="form-group row">
             <label for="customer" style="margin-left:25px;font-size:25px;font-weight:bold;">Customer</label>
-            <div style="margin-left:25px;font-size:25px;font-weight:bold;width:55%;">
+            <div style="margin-left:32px;font-size:25px;font-weight:bold;width:55%;">
                {{ form.name }}
 			</div>
         </div>
