--- a/product/templates/product/edit_splicing.html
+++ b/product/templates/product/edit_splicing.html
@@ -88,7 +88,7 @@
 	closeModalBtn.addEventListener("click", function() {
 	  // Redirect to the previous page
 	  
-	  window.location.href = "{% url 'product:stock-list'%}";
+	  window.location.href = "{% url 'product:spl-create'%}";
 		
 	});
 	
